--- a/src/app/Dockerfile
+++ b/src/app/Dockerfile
@@ -16,4 +16,4 @@ RUN git clone https://github.com/benthecoder/gpt3-blog-title.git .
 
 RUN pip3 install -r requirements.txt
 
-ENTRYPOINT ["streamlit", "run", "main.py", "--server.port=8501", "--server.address=0.0.0.0"]
+ENTRYPOINT ["streamlit", "run", "src/app/main.py", "--server.port=8501", "--server.address=0.0.0.0"]
